Changes for 1.0beta1:
(Add support for PostgreSQL and patches)
(Add description of new tables and column URL to the manual)
(snmptrap -v 1 127.0.0.1 public '' localhost 3 0 '' interfaces.ifTable.ifEntry.ifIndex.1 i 1)

 - support for DB* parameters in zabbix_suckerd.conf (Alexei)
 - not supported items will not be shown in latest values (Alexei)
 - zabbix_agentd cannot be ran as root (Alexei)
 - added file misc/conf/zabbix_suckerd.conf (Alexei)
 - added misc/init.d/debian/zabbix-server (Alexei)
 - zabbix_suckerd cannot be ran as root (Alexei)
 - added column URL to table triggers (Alexei)
 - character '.' can be used in definition of monitored paramaters
 (Alexei)
 - added average-only mode for trends (Alexei)
 - fixed bug with unexpected change of item status to NOT SUPPORTED. This
 bug appeared because of incomplete processing of timeout situations (Alexei)
 - constant DELAY_ON_NETWORK_FAILURE is set to 60 (Alexei)
 - added column status to table services (Alexei)
 - added user-defined sorting to form "Latest Values" (Alexei)
 - extra debug information in case of network errors in zabbix_suckerd
 (Alexei)
 - fixed uninterruptable calls to connect() in zabbix_suckerd (Alexei)
 - added column "soft" to services_links (Alexei)
 - added function DBfetch to frontends/php/include/db.inc (Alexei)
 - srv_status.html accessible without password (Alexei)
 - added srv_status.html and services.html (Alexei)
 - added table services and services_links (Alexei)
 - support for parameter StartAgents in zabbix_agentd.conf (Alexei)
 - number of forked zabbix_trapperd decreased to 5 (Alexei)
 - number of forked zabbix_agentd decreased to 5 (Alexei)
 - support for parameter UserParameter in zabbix_agentd.conf (Alexei)
 - support for advanced zabbix_agentd.conf (Alexei)
 - added misc/conf/zabbix_agentd.conf
 - in case of network error, zabbix_suckerd will not try to request any parameters
 from the host during next 120 seconds (Alexei)